# lab_tree

./: .gitignore  Avl_tree.c  Avl_tree.h  B_tree.c  B_tree.h  CMakeLists.txt  Decartach.c  Decartach.h  ElemTree.c  ElemTree.h  README.md  Readme.md  RedBlackTree.c  RedBlackTree.h  Skip_List.c  Skip_List.h  Splay_tree.c  Splay_tree.h  b_tree.c  btree.c  btree.h  graph_ctor (3).py  main.c  node.c  node.h  pyvenv.cfg
avl/: avl_tree.c  avl_tree.h
b/: b_tree.c  b_tree.h
bin_tree/: BinTree.c  BinTree.h
data/: AVL_insert.txt  AVL_remove.txt  BTree_insert.txt  Bin_insert.txt  Bin_remove.txt  RBT_insert.txt  RBT_remove.txt  Skip_insert.txt  Skip_remove.txt  decart_insert.txt  decart_remove.txt  splay_insert.txt  splay_remove.txt
decart/: decart_tree.c  decart_tree.h
fvds_env/: pyvenv.cfg
lab_tree/: pyvenv.cfg
lab_tree_env/: pyvenv.cfg
rb/: rb_tree.c  rb_tree.h
skip/: skip_list.c  skip_list.h
splay/: splay_tree.c  splay_tree.h
